[package]
name = "rcli"
version = "0.1.0"
authors = ["Michel Feng <michelfeng@gmail.com>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"  # error handling library
base64 = "0.22.1"
blake3 = "1.6.1"
clap = { version = "4.5.31", features = ["derive"] } # command line argument parser
csv = "1.3.1" # CSV library
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5" # random number generator library
serde = { version = "1.0.218", features = ["derive"] } # serialization/deserialization library
serde_json = "1.0.140" # JSON serialization/deserialization library
serde_yaml = "0.9.34" # YAML serialization/deserialization library
toml = "0.8.20" # TOML serialization/deserialization library
zxcvbn = "3.1.0"
